design/nsg-config-export.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
    "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
    "location": "westeurope",
    "name": "app-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/networkInterfaces/APP-NIC",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-routewell",
    "resourceGuid": "84ea1053-c11b-4790-a952-803f90f58280",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-App-Port",
        "name": "Allow-App-Port",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "10.10.0.0/27",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"8b86116c-d9f1-4643-8f23-c26a0770421d\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-SSH",
        "name": "Allow-SSH",
        "priority": 110,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "10.10.0.0/27",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/virtualNetworks/VNET-ROUTEWELL/subnets/APP-SUBNET",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
    "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
    "location": "westeurope",
    "name": "db-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/networkInterfaces/DB-NIC",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-routewell",
    "resourceGuid": "a1859c73-fc0c-45cf-b5ed-6ce6b958bcfa",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5432",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-PostgreSQL",
        "name": "Allow-PostgreSQL",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "10.10.1.0/26",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-SSH",
        "name": "Allow-SSH",
        "priority": 110,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "10.10.1.0/26",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"f0b31180-3104-4955-9491-0d325997412e\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Deny-Other-VNet-Inbound",
        "name": "Deny-Other-VNet-Inbound",
        "priority": 200,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/virtualNetworks/VNET-ROUTEWELL/subnets/DB-SUBNET",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
    "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
    "location": "westeurope",
    "name": "web-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/networkInterfaces/WEB-NIC",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-routewell",
    "resourceGuid": "3b3277ab-1918-46b0-8e19-3879c5ec8606",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRanges": [
          "80",
          "443"
        ],
        "direction": "Inbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-HTTP-HTTPS",
        "name": "Allow-HTTP-HTTPS",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"715fcb3d-bd11-42c8-8212-332005391ee0\"",
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/rg-routewell/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-SSH",
        "name": "Allow-SSH",
        "priority": 120,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-routewell",
        "sourceAddressPrefix": "98.97.77.30/32",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/f2cc7af6-7056-4f5b-ad83-d796b439fb3a/resourceGroups/RG-ROUTEWELL/providers/Microsoft.Network/virtualNetworks/VNET-ROUTEWELL/subnets/WEB-SUBNET",
        "resourceGroup": "RG-ROUTEWELL"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
